# The-Evolution-of-Todo-Spec-Driven-Development

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
history/prompts/constitution/: 1-project-constitution-update.constitution.prompt.md
history/prompts/todo-cli-app/: 1-todo-cli-app-spec.spec.prompt.md  2-todo-cli-app-plan.plan.prompt.md  3-todo-cli-app-tasks.tasks.prompt.md  4-todo-cli-app-implementation.implement.prompt.md
specs/1-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-cli-app/checklists/: requirements.md
specs/1-todo-cli-app/contracts/: todo-cli-contract.md
src/todo/: __init__.py  __main__.py
src/todo/cli/: __init__.py  interface.py
src/todo/core/: __init__.py  models.py  services.py
tests/integration/: __init__.py
tests/unit/: __init__.py
