[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools"

[project]
name = "evolution-of-todo"
version = "0.1.0"
description = "A todo application demonstrating evolution from CLI to cloud-native AI systems"
readme = "README.md"
authors = [
    {name = "Muhammad Omer Moazzam", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
todo = "src.todo.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]
explicit_package_bases = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88